[workspace]
members = [
    "pallet",
    "rpc",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Eiger <hello@eiger.co>"]
readme = "README.md"
repository = "https://github.com/eigerco/substrate-movevm-pallet"

[workspace.dependencies]
# crates.io
anyhow = { version = "1.0", default-features = false }
bcs = { git = "https://github.com/eigerco/bcs.git", default-features = false, branch = "master" }
blake2 = { version = "0.10", default-features = false }
codec = { package = "parity-scale-codec", version = "3.6", default-features = false, features = ["derive"] }
hashbrown = { version = "0.14", default-features = false }
hex = { version = "0.4", default-features = false }
jsonrpsee = { version = "0.22", default-features = false, features = ["server", "macros", "client-core"] }
log = { version = "0.4", default-features = false }
rand = { version = "0.8", default-features = false }
scale-info = { version = "2.11", default-features = false, features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }

# Polkadot crates
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.12.0-rc3", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.12.0-rc3", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.12.0-rc3", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.12.0-rc3", default-features = false }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.12.0-rc3", default-features = false }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.12.0-rc3", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.12.0-rc3", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.12.0-rc3", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.12.0-rc3", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.12.0-rc3", default-features = false }

# Eiger crates
move-core-types = { git = "https://github.com/eigerco/substrate-move.git", branch = "main", features = ["address32"], default-features = false }
move-stdlib = { git = "https://github.com/eigerco/substrate-move.git", branch = "main", features = ["stdlib-bytecode"], default-features = false }
move-vm-backend = { git = "https://github.com/eigerco/substrate-move.git", branch = "main", default-features = false }
move-vm-backend-common = { git = "https://github.com/eigerco/substrate-move.git", branch = "main", default-features = false }
