[package]
name = "pallet-move-rpc"
version = "0.1.0"
description = "RPC for the Move Pallet"
authors = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
serde = { workspace = true }
frame-support = { workspace = true }
jsonrpsee = { workspace = true }
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-runtime = { workspace = true }

pallet-move = { path = "../pallet" }

[features]
default = ["std"]
std = [
    "sp-api/std",
    "sp-runtime/std",
    "pallet-move/std"
]
