[package]
name = "pallet-move-runtime-api"
version = "0.1.0"
authors = ["Eiger <hello@eiger.co>"]
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive",] }
frame-support = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.3.0" }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.3.0", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"sp-api/std",
]
