[package]
name = "pallet-move-runtime-api"
version = "0.1.0"
authors = ["Eiger <hello@eiger.co>"]
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6", default-features = false, features = ["derive"] }
scale-info = { version = "2.10", default-features = false, features = ["derive"] }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.4.0", default-features = false }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.4.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.4.0", default-features = false  }

pallet-move = { path = "../..", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
    "pallet-move/std",
	"sp-api/std",
]
